--- a/refrential-integrity.tex
+++ b/refrential-integrity.tex
@@ -35,6 +35,8 @@
 \section{Pengantar}%
 \label{sec:pengantar}
 
+test
+
 Pada praktikum 4.3 ini, kita akan mengenal dan mempelajari tentang konsep \textit{Refrential Integrity Constraint} /  \textit{Behavior Foreign Key} di dalam SQL (MySQL).
 
 \section{Refrential Integrity Constraint}%
