clear past content

--- a/refrential-integrity.tex
+++ b/refrential-integrity.tex
@@ -44,7 +44,7 @@ Pada praktikum 4.3 ini, kita akan mengenal dan mempelajari tentang konsep \texti
 
 Misalnya ketika suatu tabel berelasi dengan tabel lain dan kita menghapus salah satu data yang berelasi, MySQL akan menolak operasi delete tersebut. Hal itu tidak bisa dilakukan karena statusnya \textit{restrict} (nanti kita akan bahas).  Kita juga bisa mengubah fitur ini jika kita mau, ada banyak hal yang bisa dilakukan ketika data berelasi dihapus, defaultnya memang akan ditolak (RESTRICT)
 
-Untuk menggunakan fitur \textit{Referential Integrity} tipe dari \textit{store engine} tabel yang digunakan adalah yang support transaksional, salah satu contoh di MySQL yang support transaksional adalah \textit{store engine InnoDB}. 
+Untuk menggunakan fitur \textit{Referential Integrity} tipe dari \textit{store engine} tabel yang digunakan adalah yang support transaksional, salah satu contoh di MySQL yang support transaksional adalah \textit{store engine InnoDB}..
 
 \section{Jenis-Jenis Refrential Integrity Constraint / Behavior Foreign Key}%
 \label{sec:section_name}
