menambahkan materi pengenalan view

--- a/view.tex
+++ b/view.tex
@@ -39,6 +39,9 @@
 Pada praktikum 4.4 ini, kita akan mengenal dan mempelajari tentang konsep \textit{View}  di dalam SQL (MySQL).
 
 \section{Pengenalan View}%
+
+Di dalam MySQL, View dapat didefenisikan sebagai \textbf{tabel virtual}. Tabel ini bisa berasal dari tabel lain, atau gabungan dari beberapa tabel. Tujuan dari pembuatan \textit{View} adalah untuk kenyamanan (mempermudah penulisan \textit{query}), untuk keamanan (menyembunyikan beberapa kolom yang bersifat rahasia), atau dalam beberapa kasus bisa digunakan untuk mempercepat proses menampilkan data (terutama jika kita akan menjalankan query tersebut secara berulang).
+
 \label{sec:section_name}
 
 \section{Create View}%
